- Feature: Added plugins for volume rendering
- Change: Moved out-of-date "PLScene::SNSky" and "PLScene::SNTerrain" into the new plugin project "PLNature" ("PLNature::SNSky", "PLNature::SNTerrain")
- Change: Moved "PLPhysics::SNMPhysicsBodyTerrain" into "PLNature::SNMPhysicsBodyTerrain"
- Change: Updated from "Cg Toolkit 3.1 - February 2012" to "Cg Toolkit 3.1 - April 2012"
- Bugfix (ID: 3502066): "PLGraphics::Color4::IsValid()" alpha-check was invalid
- Bugfix (ID: 3512436): "pl_implement_class(Keyboard)" was missing within "PLInput"
- Bugfix (ID: 3514155): The ingame console was processing input events received while the main window had no focus
- Bugfix (ID: 3531730): "PLScene::SceneContainer::SetHierarchy()" did not assign the new given hierarchy type
- Bugfix: "PLRenderer::Texture::SetTextureBuffer()" did not update the original texture size
- Bugfix: "PLRenderer::EffectLoaderPL::LoadV1()" was not loading the "Name"-attribute of techniques
- Bugfix: When loading a new resource, PLViewer/PLViewerQt did not destroy the currently used script


Changes in PixelLight 0.9.11-R1 (released on February 23, 2012)
- Feature: Beside "Scene" and "Script", "PLViewer" is now also able to load in "Mesh", "Material" and "Image" (= texture)
- Feature: Within the PLFrontendQt adapter project, there's now an interactive realtime RTTI browsing GUI
- Feature: Added dock widgets to the PLFrontendQt adapter project which can be instanced and used via the PixelLight RTTI system in a generic way
- Feature: Added Qt based PixelLight viewer named PLViewerQt which is similar to the minimalistic PLViewer, but more advanced and with support for the PLFrontendQt dock widgets
- Feature: "PLRenderer::VertexBuffer": Added support for the "half" data type (16 bit floating point)
- Feature: "PLRenderer::VertexBuffer": Added generic comfort methods "GetFloat()" and "SetFloat()"